--- a/index.html
+++ b/index.html
@@ -2,17 +2,106 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Max Hits</title>
+<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+<title>Max Hits - Os Hits mais tocados no Brasil e no Mundo!</title>
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+<link rel="stylesheet" href="css/font-awesome.css">
+<link rel="stylesheet" href="css/icon-select.css">
+<link rel="stylesheet" href="css/nice-select.css">
+<link rel="stylesheet" href="css/carousel.css">
+<link rel="stylesheet" href="css/lity.css"/>
+<link rel="stylesheet" href="css/equalizer.css">
+<link rel="stylesheet" href="css/alertify.css">
 <link rel="stylesheet" href="css/styles.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="js/scripts.js"></script>
+<script src="js/nice-select.js"></script>
+<script src="js/item-slide.js"></script>
+<script src="js/vegas.js"></script>
+<script src="js/alertify.js"></script>
 </head>
-
 <body>
-
-	<div id="TopList">
-		<ol class="list"></ol>
-	</div>
-
+<header>
+  <div class="logo"><a href="index.html"><i class="fa fa-headphones"></i> max hits</a>
+    <p> os hits mais tocados no brasil e no mundo</p>
+  </div>
+  <div class="equalizer"></div>
+  <div class="search">
+    <div class="bgSearch">
+      <input type="text" name="search" id="search" autocomplete="off" placeholder="Digite uma mídia..." >
+      <label for="select"></label>
+      <select name="select" id="select">
+        <option value="track.search">Músicas</option>
+        <option value="album.search">Álbums</option>
+        <option value="artist.search">Artistas</option>
+      </select>
+      <button id="submit" value="Buscar" name="buscar">Buscar</button>
+    </div>
+  </div>
+</header>
+<main>
+  <div class="resultSearch"></div>
+  <div id="carousel">
+    <ul class="cat">
+      <li class="cat-link" data="dance"><img src="images/cat-2.jpg" alt="Dance"><span>Dance</span></li>
+      <li class="cat-link" data="house"><img src="images/cat-7.jpg" alt="House"><span>House</span></li>
+      <li class="cat-link current" data="eletronic"><img src="images/cat-1.jpg" alt="eletronica"><span>Eletrônica</span></li>
+      <li class="cat-link" data="trance"><img src="images/cat-5.jpg" alt="Trance"><span>Trance</span></li>
+      <li class="cat-link" data="eurodance"><img src="images/cat-20.jpg" alt="Eurodance"><span>Eurodance</span></li>
+      <li class="cat-link" data="disco"><img src="images/cat-8.jpg" alt="Disco"><span>Disco</span></li>
+      <li class="cat-link" data="techno"><img src="images/cat-10.jpg" alt="Techno"><span>Techno</span></li>
+      <li class="cat-link" data="chillout"><img src="images/cat-17.jpg" alt="Chillout"><span>Chillout</span></li>
+      <li class="cat-link" data="club"><img src="images/cat-12.jpg" alt="Club"><span>Club</span></li>
+      <li class="cat-link" data="ambient"><img src="images/cat-19.jpg" alt="Ambiente"><span>Ambiente</span></li>
+      <li class="cat-link" data="space dreams"><img src="images/cat-14.jpg" alt="Space Dreams"><span>Space Dreams</span></li>
+      <li class="cat-link" data="nightcore"><img src="images/cat-18.jpg" alt="Nightcore"><span>Nightcore</span></li>
+      <li class="cat-link" data="dj mixes"><img src="images/cat-11.jpg" alt="DJ Mixes"><span>DJ Mixes</span></li>
+      <li class="cat-link" data="bass"><img src="images/cat-13.jpg" alt="Bass"><span>Bass</span></li>
+    </ul>
+  </div>
+  <div class="lists">
+    <div id="topList">
+      <ul class="tabsCat">
+        <li id="tabtracks" class="tab-link current" data="tracks"><i class="fa fa-play"></i> Tracks</li>
+        <li id="tabartists" class="tab-link" data="artists"><i class="fa fa-user-circle"></i> Artistas</li>
+        <li id="tabalbums" class="tab-link" data="albums"><i class="fa fa-music"></i> Álbums</li>
+      </ul>
+      <div id="tracks" class="tab-content-cat current">
+        <ul id="ultracks">
+        </ul>
+      </div>
+      <div id="artists" class="tab-content-cat">
+        <ul id="ulartists">
+        </ul>
+      </div>
+      <div id="albums" class="tab-content-cat">
+        <ul id="ulalbums">
+        </ul>
+      </div>
+    </div>
+    <div id="topListCountry">
+      <ul class="tabsCountry">
+        <li id="tabtracksCountry" class="tab-link-country current" data="tracks"><i class="fa fa-play"></i> Tracks</li>
+        <li id="tabartistsCountry" class="tab-link-country" data="artists"><i class="fa fa-user-circle"></i> Artistas</li>
+      </ul>
+      <div id="selectCountry"></div>
+      <div id="tracksCountry" class="tab-content-country current">
+        <ul id="ultracksCountry">
+        </ul>
+      </div>
+      <div id="artistsCountry" class="tab-content-country">
+        <ul id="ulartistsCountry">
+        </ul>
+      </div>
+    </div>
+  </div>
+</main>
+<footer>
+  <p><span class="copy">©</span> Copyright 2018 <span>max hits</span>. Todos os Direitos Reservados</p>
+  <p>API By <a href="https://www.last.fm/api" target="_blank"><img src="images/lastfm.png" alt="Last FM"></a></p>
+</footer>
+<div id="boxInfo" class="lity-hide"></div>
+<script src="js/icon-select.js"></script> 
+<script src="js/lity.js"></script> 
+<script src="js/app.js"></script>
 </body>
 </html>
