--- a/index.html
+++ b/index.html
@@ -5,36 +5,53 @@
 <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 <title>Max Hits - Os Hits mais tocados no Brasil e no Mundo!</title>
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="css/font-awesome.css">
-<link rel="stylesheet" href="css/icon-select.css">
-<link rel="stylesheet" href="css/nice-select.css">
-<link rel="stylesheet" href="css/carousel.css">
-<link rel="stylesheet" href="css/lity.css"/>
-<link rel="stylesheet" href="css/equalizer.css">
-<link rel="stylesheet" href="css/alertify.css">
-<link rel="stylesheet" href="css/styles.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="js/nice-select.js"></script>
-<script src="js/item-slide.js"></script>
-<script src="js/vegas.js"></script>
-<script src="js/alertify.js"></script>
+<link rel="stylesheet" href="dist/css/bundle.css">
 </head>
 <body>
 <header>
-  <div class="logo"><a href="index.html"><i class="fa fa-headphones"></i> max hits</a>
-    <p> os hits mais tocados no brasil e no mundo</p>
+  <div class="radio affix-top" data-spy="affix" data-offset-top="1" >
+    <div id="jplayer" class="jplayer"></div>
+    <div id="jp_container" class="audio" role="application">
+      <div class="gui interface">
+        <div class="folder"></div>
+        <div class="data-radio">
+          <div class="titleRadio"></div>
+          <div class="current-time" role="timer">&nbsp;</div>
+        </div>
+        <div class="controls">
+          <button class="previous" role="button" tabindex="0"><i class="fa fa-backward"></i></button>
+          <button class="play" role="button" tabindex="0"><i class="fa fa-play-circle"></i></button>
+          <button class="pause" role="button" tabindex="0"><i class="fa fa-pause"></i></button>
+          <button class="stop" role="button" tabindex="0"><i class="fa fa-stop"></i></button>
+          <button class="next" role="button" tabindex="0"><i class="fa fa-forward"></i></button>
+        </div>
+        <div class="volume-controls">
+          <button class="unmute" role="button" tabindex="0"><i class="fa fa-volume-off"></i></button>
+          <button class="mute" role="button" tabindex="0"><i class="fa fa-volume-down"></i></button>
+          <div class="volume-bar">
+            <div class="volume-bar-value"></div>
+          </div>
+          <button class="volume-max" role="button" tabindex="0"><i class="fa fa-volume-up"></i></button>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="equalizer"></div>
-  <div class="search">
-    <div class="bgSearch">
-      <input type="text" name="search" id="search" autocomplete="off" placeholder="Digite uma mídia..." >
-      <label for="select"></label>
-      <select name="select" id="select">
-        <option value="track.search">Músicas</option>
-        <option value="album.search">Álbums</option>
-        <option value="artist.search">Artistas</option>
-      </select>
-      <button id="submit" value="Buscar" name="buscar">Buscar</button>
+  <div class="header">
+    <div class="logo"><a href="index.html"><i class="fa fa-headphones"></i> max hits</a>
+      <p> os hits mais tocados no brasil e no mundo</p>
+    </div>
+    <div class="equalizer"></div>
+    <div class="search">
+      <div class="bgSearch">
+        <input type="text" name="search" id="search" autocomplete="off" placeholder="Digite uma mídia..." >
+        <label for="select"></label>
+        <select name="select" id="select">
+          <option value="track.search">Músicas</option>
+          <option value="album.search">Álbums</option>
+          <option value="artist.search">Artistas</option>
+        </select>
+        <button id="submit" value="Buscar" name="buscar">Buscar</button>
+      </div>
     </div>
   </div>
 </header>
@@ -42,20 +59,20 @@
   <div class="resultSearch"></div>
   <div id="carousel">
     <ul class="cat">
-      <li class="cat-link" data="dance"><img src="images/cat-2.jpg" alt="Dance"><span>Dance</span></li>
-      <li class="cat-link" data="house"><img src="images/cat-7.jpg" alt="House"><span>House</span></li>
-      <li class="cat-link current" data="eletronic"><img src="images/cat-1.jpg" alt="eletronica"><span>Eletrônica</span></li>
-      <li class="cat-link" data="trance"><img src="images/cat-5.jpg" alt="Trance"><span>Trance</span></li>
-      <li class="cat-link" data="eurodance"><img src="images/cat-20.jpg" alt="Eurodance"><span>Eurodance</span></li>
-      <li class="cat-link" data="disco"><img src="images/cat-8.jpg" alt="Disco"><span>Disco</span></li>
-      <li class="cat-link" data="techno"><img src="images/cat-10.jpg" alt="Techno"><span>Techno</span></li>
-      <li class="cat-link" data="chillout"><img src="images/cat-17.jpg" alt="Chillout"><span>Chillout</span></li>
-      <li class="cat-link" data="club"><img src="images/cat-12.jpg" alt="Club"><span>Club</span></li>
-      <li class="cat-link" data="ambient"><img src="images/cat-19.jpg" alt="Ambiente"><span>Ambiente</span></li>
-      <li class="cat-link" data="space dreams"><img src="images/cat-14.jpg" alt="Space Dreams"><span>Space Dreams</span></li>
-      <li class="cat-link" data="nightcore"><img src="images/cat-18.jpg" alt="Nightcore"><span>Nightcore</span></li>
-      <li class="cat-link" data="dj mixes"><img src="images/cat-11.jpg" alt="DJ Mixes"><span>DJ Mixes</span></li>
-      <li class="cat-link" data="bass"><img src="images/cat-13.jpg" alt="Bass"><span>Bass</span></li>
+      <li class="cat-link" data-radio="classiceurodance" data-name="dance"><img src="images/ritmos/dance.jpg" alt="Dance"><span>Dance</span></li>
+      <li class="cat-link" data-radio="house" data-name="house"><img src="images/ritmos/house.jpg" alt="House"><span>House</span></li>
+      <li class="cat-link current" data-radio="electrohouse" data-name="eletronic"><img src="images/ritmos/eletronic.jpg" alt="eletronica"><span>Eletrônica</span></li>
+      <li class="cat-link" data-radio="trance" data-name="trance"><img src="images/ritmos/trance.jpg" alt="Trance"><span>Trance</span></li>
+      <li class="cat-link" data-radio="eurodance" data-name="eurodance"><img src="images/ritmos/eurodance.jpg" alt="Eurodance"><span>Eurodance</span></li>
+      <li class="cat-link" data-radio="deepnudisco" data-name="disco"><img src="images/ritmos/disco.jpg" alt="Disco"><span>Disco</span></li>
+      <li class="cat-link" data-radio="techno" data-name="techno"><img src="images/ritmos/techno.jpg" alt="Techno"><span>Techno</span></li>
+      <li class="cat-link" data-radio="chillout" data-name="chillout"><img src="images/ritmos/chillout.jpg" alt="Chillout"><span>Chillout</span></li>
+      <li class="cat-link" data-radio="00sclubhits" data-name="club"><img src="images/ritmos/club.jpg" alt="Club"><span>Club</span></li>
+      <li class="cat-link" data-radio="ambient" data-name="ambient"><img src="images/ritmos/ambient.jpg" alt="Ambiente"><span>Ambiente</span></li>
+      <li class="cat-link" data-radio="spacemusic" data-name="space dreams"><img src="images/ritmos/space dreams.jpg" alt="Space Dreams"><span>Space Dreams</span></li>
+      <li class="cat-link" data-radio="nightcore" data-name="nightcore"><img src="images/ritmos/nightcore.jpg" alt="Nightcore"><span>Nightcore</span></li>
+      <li class="cat-link" data-radio="djmixes" data-name="dj mixes"><img src="images/ritmos/dj mixes.jpg" alt="DJ Mixes"><span>DJ Mixes</span></li>
+      <li class="cat-link" data-radio="drumandbass" data-name="bass"><img src="images/ritmos/bass.jpg" alt="Bass"><span>Bass</span></li>
     </ul>
   </div>
   <div class="lists">
@@ -96,12 +113,11 @@
   </div>
 </main>
 <footer>
-  <p><span class="copy">©</span> Copyright 2018 <span>max hits</span>. Todos os Direitos Reservados</p>
-  <p>API By <a href="https://www.last.fm/api" target="_blank"><img src="images/lastfm.png" alt="Last FM"></a></p>
+  <p><span class="copy">©</span> Copyright 2018 <span class="maxhits">max hits</span>. Todos os Direitos Reservados<br>
+    <a href="mailto:gesoaldo.guimaraes@academico.ifpb.edu.br" target="_blank">Desenvolvido por Gesoaldo Guimarães | Sistemas para Internet - IFPB </a></p>
+  <p class="references"><span>API By <a href="https://www.last.fm/api" target="_blank"><img src="images/lastfm.png" alt="Last FM"></a></span><span>Stream for <a href="https://www.di.fm/" target="_blank"><img src="images/difm.png" alt="DI FM"></a></span></p>
 </footer>
 <div id="boxInfo" class="lity-hide"></div>
-<script src="js/icon-select.js"></script> 
-<script src="js/lity.js"></script> 
-<script src="js/app.js"></script>
+<script src="dist/js/bundle.js"></script>
 </body>
 </html>
